<resources>
    <string name="app_name">Pizzaria</string>
    <string name="insert_menu_item">Inserir item no cardápio</string>
    <string name="login_password_incorrect">Login ou senha incorretos</string>
    <string name="close">Fechar</string>
    <string name="salvar">salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="addPizza">Adicionar pizza</string>
    <string name="splashWarningText">O tempo não pode ser menor que 3 segundos e nem maior que 30 segundos</string>
    <string name="splashScreenTimeKey">splashScreenTime</string>
    <string name="splashScreenSuccessText">Configuração salva com sucesso</string>
    <string name="login_password">fiap</string>
    <string name="real">R$</string>
    <string name="image_type">image/*</string>
    <string name="db_name">RM79388</string>
    <string name="table_log">log</string>
    <string name="avaliacao">Avaliação:</string>
    <string name="calorias">Calorias:</string>
    <string name="table_menu">menu</string>
    <string name="tempo_do_splashscreen">Tempo do splashscreen</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="preco">Preço</string>
    <string name="avaliacao2">Avaliação</string>
    <string name="calorias2">Calorias</string>
    <string name="observacoes_ingredientes_restricoes_etc">Observações (ingredientes, restrições, etc.)</string>
    <string name="pizza_obs_default_text">Pizza Vegana</string>
    <string name="pizza_price_default_text">R$ 36,90</string>
    <string name="pizza_name_default_text">Pizza Vegana</string>
    <string name="name_placeholder">Nome</string>
</resources>
